# WebAssembly-protocol-generator

./: .gitignore  Cargo.toml  README.md  protocol.c  protocol.h  protocol.typ
example/: example.prot  example.typ  main.c  makefile  protocol.c  protocol.h  protocol.typ
exemples/: simple.prot  struct.prot
src/: argparse.rs  lib.rs  main.rs  protocol.pest  protocol.rs  struct_.rs  types.rs
src/generator/: cgenerator.rs  mod.rs  typstgenerator.rs
src/parser/: mod.rs  protocol.pest
