[package]
name = "wasmpg"
version = "0.1.1"
authors = ["Robotechnic <@Robotechnic>"]
edition = "2021"
description = "An utility script to generate the necessary code to easily use the WebAssembly minimal protocol of typst"
readme = "README.md"
repository = "https://github.com/Robotechnic/WebAssembly-protocol-generator"
license-file = "LICENSE"
keywords = ["wasm", "protocol", "generator", "typst", "webassembly"]
categories = ["development-tools", "command-line-utilities", "typst"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
pest = "2.6"
pest_derive = "2.6"
